--- a/views/newmemo.erb
+++ b/views/newmemo.erb
@@ -1,19 +1,15 @@
-
-
-<form method="post" action="/new">
+<form method="post" action="/memos">
   <div>
     <label>
       Title<br>
-      <input required type="text" name="title">
+      <input required type="text" name="title" >
     </label>
   </div>
   <div>
     <label>    
       Memo<br>
-      <textarea name="memo" required></textarea>
+      <textarea name="memo" required ></textarea>
     </label>
   </div>    
   <input type="submit" value="保存">
 </form>
-
-
