--- a/views/showmemo.erb
+++ b/views/showmemo.erb
@@ -1,12 +1,11 @@
-
-<h2><%= @select_title %></h2>
+<h2><%= escape_html(@select_title) %></h2>
 <p>
-<%= @select_memo %>
+  <%= @select_memo %>
 </p>
-<form method="get" action="/showmemo/<%= @select_id %>/edit">
+<form method="get" action="/memos/<%= @select_id %>/edit">
   <button type="submit">変更</button>
-</form>  
-<form method="post" action="/deletememo/<%= @select_id %>">
+</form>
+<form method="post" action="/memos/<%= @select_id %>">
   <input name="_method" type="hidden" value="delete">
   <button type="submit">削除</button>
-</form>  
+</form>
