--- a/views/show_memo.erb
+++ b/views/show_memo.erb
@@ -1,11 +1,11 @@
-<h2><%= @title %></h2>
+<h2><%= @memo[:title] %></h2>
 <p>
-  <%= @memo %>
+  <%= @memo[:memo] %>
 </p>
-<form method="get" action="/memos/<%= @id %>/edit">
+<form method="get" action="/memos/<%= @memo[:id] %>/edit">
   <button type="submit">変更</button>
 </form>
-<form method="post" action="/memos/<%= @id %>">
+<form method="post" action="/memos/<%= @memo[:id] %>">
   <input name="_method" type="hidden" value="delete">
   <button type="submit">削除</button>
 </form>
