--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <ul>
   <% @memos.each do |memo| %>
     <li>
-      <a href="/memos/<%= memo[:id] %>"><%= memo[:title] %></a>
+      <a href="/memos/<%= memo[:id] %>"><%= escape_html(memo[:title]) %></a>
     </li>
   <% end %>
 </ul>
